'correct spacing fix...'

--- a/app/assets/stylesheets/globals/homepage.css.scss
+++ b/app/assets/stylesheets/globals/homepage.css.scss
@@ -48,10 +48,6 @@
         }
     }
 
-    .intro-text.top-box {
-      margin-bottom: 4em;
-    }
-
     .intro-text h2 {
         color: #fff;
         font-weight: 300;
@@ -72,7 +68,7 @@
         padding:0;
         position: absolute;
         text-align: center;
-        top: 18em;
+        top: 22em;
         width: 100%;
         z-index: 10;
 
